--- a/src/TouchKeyboardMouse.csproj
+++ b/src/TouchKeyboardMouse.csproj
@@ -7,6 +7,7 @@
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationHighDpiMode>PerMonitorV2</ApplicationHighDpiMode>
     <AssemblyName>TouchKeyboardMouse</AssemblyName>
     <RootNamespace>TouchKeyboardMouse</RootNamespace>
     <Version>1.0.0</Version>
