Move custom controls to Shared/Controls and update shared project to include them

--- a/src/Shared/TouchKeyboardMouse.Shared.csproj
+++ b/src/Shared/TouchKeyboardMouse.Shared.csproj
@@ -4,6 +4,7 @@
     <RootNamespace>TouchKeyboardMouse.Shared</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <!-- No explicit Compile includes needed -->
+    <Page Include="Controls/*.xaml" />
+    <Compile Include="Controls/*.xaml.cs" />
   </ItemGroup>
 </Project>
